<?xml version="1.0" encoding="utf-8"?>
<!--
  Nextcloud Android client application

  Copyright (C) 2018 Andy Scherzinger

  This program is free software; you can redistribute it and/or
  modify it under the terms of the GNU AFFERO GENERAL PUBLIC LICENSE
  License as published by the Free Software Foundation; either
  version 3 of the License, or any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU AFFERO GENERAL PUBLIC LICENSE for more details.

  You should have received a copy of the GNU Affero General Public
  License along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:ignore="AppCompatResource">

    <item
        android:id="@+id/action_rename_file"
        android:title="@string/common_rename"
        app:showAsAction="never"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_download_file"
        android:title="@string/filedetails_download"
        app:showAsAction="never"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_send_file"
        android:title="@string/common_send"
        app:showAsAction="never"
        android:showAsAction="never"
        android:icon="@drawable/ic_share" />
    <item
        android:id="@+id/action_open_file_with"
        android:title="@string/actionbar_open_with"
        app:showAsAction="never"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_sync_file"
        android:title="@string/filedetails_sync_file"
        app:showAsAction="never"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_cancel_sync"
        android:title="@string/common_cancel_sync"
        app:showAsAction="never"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_encrypted"
        android:title="@string/encrypted"
        app:showAsAction="never"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_unset_encrypted"
        android:title="@string/unset_encrypted"
        app:showAsAction="never"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_set_as_wallpaper"
        android:title="@string/set_picture_as"
        app:showAsAction="never"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_remove_file"
        android:title="@string/common_remove"
        app:showAsAction="never"
        android:showAsAction="never" />

</menu>
